solve heatmap mostly day problem